trunk/Archive2/03/f48aaa0c27f6d3/output
main.cpp: In function 'int main()':
main.cpp:27:26: error: call of overloaded 'hello(has_x_y&)' is ambiguous
     std::cout << hello(xy)  << std::endl;
                          ^
main.cpp:4:6: note: candidate: decltype (a.x) hello(Arg) [with Arg = has_x_y; decltype (a.x) = int]
 auto hello(Arg a) -> decltype( a.x ) { return a.x; }
      ^
main.cpp:7:6: note: candidate: decltype (a.y) hello(Arg) [with Arg = has_x_y; decltype (a.y) = int]
 auto hello(Arg a) -> decltype( a.y ) { return a.y; }
      ^
nm: 'a.out': No such file
